# DroneDB

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE.md  README.md  THIRD_PARTY_LICENSES.md  build-docker.ps1  build-docker.sh  constants.h  database.cpp  database.h  ddb_export.h  exceptions.cpp  exceptions.h  exif.cpp  exif.h  full-build-linux.sh  full-build-win.ps1  hash.cpp  hash.h  index.cpp  index.h  index.js  logger.cpp  logger.h  main.cpp  net.h  package-lock.json  package.json  sensor_data.h  statement.cpp  statement.h  timezone.cpp  timezone.h  url.h  (+5 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
apps/: CMakeLists.txt  main.cpp
apps/cmd/: add.cpp  align.cpp  build.cpp  cleanup.cpp  clone.cpp  cmdlist.cpp  cog.cpp  command.cpp  contour.cpp  copc.cpp  delta.cpp  ept.cpp  gendocs.cpp  geoproj.cpp  gsplat.cpp  info.cpp  init.cpp  list.cpp  login.cpp  logout.cpp  mask.cpp  merge_multispectral.cpp  meta.cpp  nxs.cpp  password.cpp  progressbar.cpp  pull.cpp  push.cpp  remove.cpp  rescan.cpp  search.cpp  setexif.cpp  share.cpp  stac.cpp  stamp.cpp  status.cpp  sync.cpp  system.cpp  tag.cpp  thumbs.cpp  (+2 more)
apps/cmd/include/: add.h  align.h  build.h  cleanup.h  clone.h  cmdlist.h  cog.h  command.h  contour.h  copc.h  delta.h  ept.h  gendocs.h  geoproj.h  gsplat.h  info.h  init.h  list.h  login.h  logout.h  mask.h  merge_multispectral.h  meta.h  nxs.h  password.h  progressbar.h  pull.h  push.h  remove.h  rescan.h  search.h  setexif.h  share.h  stac.h  stamp.h  status.h  sync.h  system.h  tag.h  thumbs.h  (+2 more)
classes/: CMakeLists.txt  authmanager.cpp  authmanager.h  basicgeometry.cpp  basicgeometry.h  database.cpp  database.h  dsmservice.cpp  dsmservice.h  exceptions.cpp  exceptions.h  exif.cpp  exif.h  exifeditor.cpp  exifeditor.h  hash.cpp  hash.h  registry.cpp  registry.h  statement.cpp  statement.h  timezone.cpp  timezone.h  userprofile.cpp  userprofile.h
cmake/: CopyDlls.cmake  FindExiv2.cmake  FindIconv.cmake  FindPDAL.cmake  FindSpatiaLite.cmake  FindSqlite3.cmake  FindZip.cmake
cmd/: CMakeLists.txt  add.cpp  add.h  build.cpp  build.h  build.hpp  command.cpp  command.h  geoproj.cpp  geoproj.h  info.cpp  info.h  init.cpp  init.h  list.h  login.cpp  logout.cpp  logout.h  remove.cpp  remove.h  set.cpp  sync.cpp  sync.h  thumbs.cpp  thumbs.h
data/: create_sensor_data.py  ddb_sensor_data.json  sensor-profiles.json  sensor_data.sqlite
docker/: Dockerfile  README.md  docker-compose.yml
docs/: about.rst  conf.py  copyright.rst  download.rst  index.rst  requirements.txt  run-server.sh
dotnet/: ddb.sln
libs/: CMakeLists.txt  ddb.cpp  ddb.h  entry.cpp  entry.h  geo.cpp  geo.h  geoproject.cpp  geoproject.h  info.cpp  info.h  thumbs.cpp  thumbs.h  types.cpp  types.h
nodejs/: CMakeLists.txt  NativeExtension.cc  entryType.js  functions.cc  functions.h  index.js  ne_dbops.cc  ne_dbops.h  ne_functions.cc  ne_functions.h  ne_helpers.cc  ne_helpers.h  ne_login.cc  ne_login.h  ne_meta.cc  ne_meta.h  ne_share.cc  ne_share.h  ne_shell.cc  ne_shell.h
scripts/: build-buildlod.ps1  build-buildlod.sh  build-debian-package.sh  build-untwine.ps1  build-untwine.sh  build-windows-package.ps1  create_sensor_data.py  download-obj2tiles.ps1  (+10 more)
src/: 3d.cpp  3d.h  CMakeLists.txt  authcredentials.cpp  authcredentials.h  authmanager.cpp  authmanager.h  basicgeometry.cpp  basicgeometry.h  build.cpp  build.h  chunkeduploadclient.cpp  chunkeduploadclient.h  clone.cpp  cog.cpp  cog.h  constants.h  coordstransformer.cpp  coordstransformer.h  curl_inc.h  database.cpp  database.h  dbops.cpp  dbops.h  ddb.cpp  ddb.h  ddb_export.h  delta.cpp  delta.h  dsmservice.cpp  dsmservice.h  entry.cpp  entry.h  entry_types.cpp  entry_types.h  epttiler.cpp  epttiler.h  exceptions.cpp  exceptions.h  exif.cpp  (+81 more)
src/cmd/: CMakeLists.txt  add.cpp  add.h  build.cpp  build.h  chattr.cpp  chattr.h  clone.cpp  clone.h  cmdlist.cpp  cmdlist.h  cog.cpp  cog.h  command.cpp  command.h  delta.cpp  delta.h  ept.cpp  ept.h  gendocs.cpp  gendocs.h  geoproj.cpp  geoproj.h  info.cpp  info.h  init.cpp  init.h  list.cpp  list.h  login.cpp  login.h  logout.cpp  logout.h  main.cpp  meta.cpp  meta.h  nxs.cpp  nxs.h  password.cpp  password.h  (+32 more)
src/include/: 3d.h  align.h  authcredentials.h  authmanager.h  basicgeometry.h  build.h  buildlock.h  buildlod_runner.h  cog.h  cog_utils.h  constants.h  contour.h  coordstransformer.h  database.h  dbops.h  ddb.h  ddb_export.h  delta.h  dsmservice.h  entry.h  entry_types.h  epttiler.h  exceptions.h  exif.h  exifeditor.h  fs.h  gdaltiler.h  geo.h  geoproject.h  gsplat.h  hash.h  info.h  json.h  logger.h  mask.h  merge_multispectral.h  metamanager.h  mio.h  mvt.h  mzip.h  (+39 more)
src/net/: functions.cpp  functions.h  reqtype.cpp  reqtype.h  request.cpp  request.h  response.cpp  response.h
src/utilities/: CMakeLists.txt  utilities.cpp
test/: CMakeLists.txt  applydelta_test.cpp  ddb_test.cpp  delta_test.cpp  dsmservice_test.cpp  entry_test.cpp  fs_test.cpp  geo_test.cpp  main.cpp  managers_test.cpp  meta_test.cpp  passwordmanager_test.cpp  pointcloud_test.cpp  registry_test.cpp  test.h  testarea.cpp  testarea.h  thumbs_test.cpp  tiler_test.cpp  utils.cpp  utils.h  utils_test.cpp  zip_test.cpp
test/data/: test.geojson  test.topojson
tests/: 3d_test.cpp  CMakeLists.txt  align_test.cpp  buildlock_test.cpp  cleanup_test.cpp  cog_optimization_test.cpp  contour_test.cpp  ddb_test.cpp  dsmservice_test.cpp  edge_raster_test.cpp  entry_test.cpp  exif_optimization_test.cpp  export_raster2_test.cpp  export_raster_test.cpp  flight_speed_test.cpp  fs_test.cpp  geo_test.cpp  glob_test.cpp  gps_metadata_test.cpp  gsplat_test.cpp  hash_benchmark_test.cpp  isbuildactive_test.cpp  isbuildcomplete_test.cpp  main.cpp  managers_test.cpp  mask_cog_test.cpp  meta_test.cpp  multispectral_test.cpp  mvt_density_test.cpp  obj2tiles_test.cpp  passwordmanager_test.cpp  pointcloud_test.cpp  raster_profile_test.cpp  raster_region_api_test.cpp  registry_test.cpp  rescan_test.cpp  schema_migration_test.cpp  stac_test.cpp  stockpile_test.cpp  test.h  (+14 more)
(+102 files in other folders)
